--- a/testvoice.html
+++ b/testvoice.html
@@ -8,7 +8,8 @@
         URI: 'oda-5b8277bc39c14499bed752a6fdd94c30-s0.data.digitalassistant.oci.oc-test.com',
         channelId: '128c65cb-e967-499e-9a95-473ad9f2edad',
         userId: 'rohitdhamija',
-        enableSpeech: true
+        enableSpeech: true,
+        enableBotAudioResponse: true
     };
     function initSdk(name) {
         // Default name is Bots
@@ -33,7 +34,7 @@
 </head>
 <body>
 
-<h1>My First Oracle Web SDK sample</h1>
+<h1>My First Oracle Web SDK sample..</h1>
 
 <p>This page is using the Oracle Digital Assistant's Client SDK for JavaScript to add live messaging!</p>
 
