--- a/testvoice.html
+++ b/testvoice.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <title>Oracle Web SDK Sample Web page</title>
+     <script src="scripts/settings.js"></script>
+     <script>
+        var chatWidgetSettings = {
+            URI: YOUR_URI,
+            channelId: YOUR_CHANNELID,
 
-<script>
-    var chatWidgetWebSettings = {
-        URI: 'oda-5b8277bc39c14499bed752a6fdd94c30-s0.data.digitalassistant.oci.oc-test.com',
-        channelId: '128c65cb-e967-499e-9a95-473ad9f2edad',
         userId: 'rohitdhamija',
         enableSpeech: true,
         enableBotAudioResponse: true
