--- a/testvoice.html
+++ b/testvoice.html
@@ -4,7 +4,7 @@
   <title>Oracle Web SDK Sample Web page</title>
      <script src="scripts/settings.js"></script>
      <script>
-        var chatWidgetSettings = {
+        var chatWidgetWebSettings = {
             URI: YOUR_URI,
             channelId: YOUR_CHANNELID,
 
@@ -29,7 +29,7 @@
                 });
         });
     }
-</script>
+</script>s
 <script src="scripts/web-sdk.js" onload="initSdk('Bots')"></script> 
     
 </head>
