--- a/testvoice.html
+++ b/testvoice.html
@@ -10,7 +10,8 @@
 
         userId: 'rohitdhamija',
         enableSpeech: true,
-        enableBotAudioResponse: true
+        enableBotAudioResponse: true,
+        isDebugMode: true
     };
     function initSdk(name) {
         // Default name is Bots
