--- a/userprofile_sample.html
+++ b/userprofile_sample.html
@@ -8,7 +8,7 @@
      <script>
         var chatWidgetSettings = {
             URI: YOUR_URI,
-            channelId: 4462d2e5-eaa8-4f5a-99be-5cce16182d97,
+            channelId: '4462d2e5-eaa8-4f5a-99be-5cce16182d97',
             userId: 'rdh'
         };
         !function (globalObj, doc, library, name) {
