--- a/basic_sample.html
+++ b/basic_sample.html
@@ -8,7 +8,8 @@
      <script>
         var chatWidgetSettings = {
             URI: YOUR_URI,
-            channelId: YOUR_CHANNELID
+            channelId: YOUR_CHANNELID,
+			enableAttachment: true
         };
         !function (globalObj, doc, library, name) {
             function initiateSDK() {
