--- a/nhscovid19.html
+++ b/nhscovid19.html
@@ -7,7 +7,11 @@
         var chatWidgetSettings = {
             URI: YOUR_URI,
             channelId: YOUR_CHANNELID,
-
+            enableClearMessage: true,
+             enableTimestamp: true,
+            showConnectionStatus: true,
+            showTypingIndicator: true,
+             isDebugMode: true,
         
         enableSpeech: true,
         enableBotAudioResponse: true,
@@ -39,6 +43,9 @@
 <style>
 body {
   background-image: url('nhdbg.jpg');
+	background-repeat:no-repeat;
+
+   background-size:cover;
 }
 </style>
 
