changed channel ID

--- a/NHS_OHS.html
+++ b/NHS_OHS.html
@@ -3,7 +3,7 @@
 <head>
   <title>Oracle Web SDK Sample Web page</title>
 	<script src="https://polyfill.io/v3/polyfill.js?features=Number.isInteger%2Cdefault"></script>
-    <script src="scripts/NHS_OHS_settings.js"></script>
+    <script src="scripts/NHS_OHS_2.js"></script>
      <script>
         var chatWidgetSettings = {
             URI: YOUR_URI,
