--- a/customfeature_sample.html
+++ b/customfeature_sample.html
@@ -57,7 +57,7 @@
 <body>
     
     <div id="customHeaderElement"><b>Always Fresh!</b></div>
-        <div id="topStickyElement" ><p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;">There’s no better feeling in the world than a warm pizza box on your lap - Kevin James</p></div>
+        <div id="topStickyElement" ><p style="border:3px; border-style:solid; border-color:#FF0000; padding: 1em;"><img src="https://objectstorage.us-ashburn-1.oraclecloud.com/n/bots4saas/b/ODADigitalAssistant/o/images/personIcon.png" alt="Smiley face" width="42" height="42">There’s no better feeling in the world than a warm pizza box on your lap - Kevin James</p></div>
     <h3 align="center">This is a sample page having ODA web widget built using Oracle Web SDK</h3>
 </body>
 
