--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -111,6 +110,24 @@
                 }
             }
 
+            //For typing indicator for keepTurn messages
+            var moreToCome = 0;
+            var typingIndicatorSafeguard=null;
+            function increaseMoreToCome(n){
+                moreToCome += n;
+                if (typingIndicatorSafeguard!=null){
+                    clearTimeout(typingIndicatorSafeguard);
+                }
+                typingIndicatorSafeguard = setTimeout(function(){moreToCome=0;}, 30000); //In any case only keep generating typing indicators for 30 seconds
+            }
+            function decreaseMoreToCome(){
+                if (moreToCome>0){
+                    moreToCome--;
+                    setTimeout(function() {Bots.sendMessage("!_TYPING_INDICATOR_PLEASE_!");}, 0);
+                }
+            }
+            //End of for typing indicator for keepTurn messages
+
             var delegate = {
                 beforeDisplay: function(message) {
                     if (message.type=='text'){
@@ -118,13 +135,32 @@
                       message.text = splitParagraph(message.text);
                     }
 
+                    //Typing indicator for keepTurn messages
+                    //Solution pending: https://bug.oraclecorp.com/pls/bug/webbug_edit.edit_info_top?rptno=30944113
+                    //Better workaround pending: https://bug.oraclecorp.com/pls/bug/webbug_edit.edit_info_top?rptno=31050601
+                    if (message.text && message.text.match((/^((Greetings)|(Saluations)).*I am Artie/))){
+                        increaseMoreToCome(2);
+                    }
+
+                    decreaseMoreToCome();
+                    //End of typing indicator for keepTurn messages
+
+                    return message;
+                },
+                beforeSend: function(message) {
+                    //For typing indicator for keepTurn messages
+                    if (message.text=="!_TYPING_INDICATOR_PLEASE_!"){
+                        return null;
+                    }
+                    moreToCome=0;
+                    //End of for typing indicator for keepTurn messages
                     return message;
                 }
             };
-            
+
             var chatWidgetWebSettings = {
                 URI: 'oda-db591e3f7b5f4a9290f3244ef44c516f-s0.data.digitalassistant.oci.oc-test.com',
-                channelId: 'bf4d8477-958c-41e8-a4b9-f770812b382b',
+                channelId: '8aec8953-f710-422c-8c6c-13a2656f8647',
                 enableTimestamp: false,
                 enableAttachment: false,
                 enableSpeech: true,
@@ -133,10 +169,10 @@
                 enableAutocomplete: true,
                 disablePastActions: 'none',
                 delegate: delegate,
-                botButtonIcon: 'images/botIcon.png',
-                botIcon: 'images/botIcon.png',
-                logoIcon: 'images/botIcon.png',
-                personIcon: 'images/personIcon.png',
+                botButtonIcon: 'https://objectstorage.us-ashburn-1.oraclecloud.com/n/bots4saas/b/ODADigitalAssistant/o/images/botIcon.png',
+                botIcon: 'https://objectstorage.us-ashburn-1.oraclecloud.com/n/bots4saas/b/ODADigitalAssistant/o/images/botIcon.png',
+                logoIcon: 'https://objectstorage.us-ashburn-1.oraclecloud.com/n/bots4saas/b/ODADigitalAssistant/o/images/botIcon.png',
+                personIcon: 'https://objectstorage.us-ashburn-1.oraclecloud.com/n/bots4saas/b/ODADigitalAssistant/o/images/personIcon.png',
                 i18n: { "en": { chatTitle: 'Oracle Digital Assistant',
                           chatSubtitle: "Help on digital assistant learning"
                         }
@@ -172,6 +208,6 @@
                 });
             }
         </script>
-        <script src="scripts/web-sdk.js" onload="initSdk()"></script>
+        <script src="files/web-sdk.js" onload="initSdk()"></script>
     </body>
 </html>
